# ucc

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  LICENSE  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  coverity.tap  cscope.out  cuda_lt.sh  effective_ai_interaction.md  form  greptile.json  index.md  jenkins_sidelinks.txt  ucc.pc.in
cmake/: Makefile.am  ucc-config-version.cmake.in  ucc-config.cmake.in  ucc-targets.cmake.in
contrib/: Makefile.am  ucc.conf  valgrind.supp
contrib/doca_urom_ucc_plugin/: DOCA_UROM_README.md  Makefile.am
contrib/doca_urom_ucc_plugin/common/: urom_ucc.h
contrib/doca_urom_ucc_plugin/dpu/: worker_ucc.c  worker_ucc.h  worker_ucc_p2p.c
contrib/dpu_daemon/: Makefile  dpu_server.c  host_channel.c  host_channel.h  server_ucc.c  server_ucc.h
src/: Makefile.am
src/api/: ucc.h  ucc_def.h  ucc_status.h  ucc_version.h  ucc_version.h.in
src/ccm/: ucc_ccm.h
src/cl/: ucc_base_iface.c  ucc_base_iface.h  ucc_cl.c  ucc_cl.h  ucc_cl_log.h  ucc_cl_type.h
src/cl/basic/: Makefile.am  cl_basic.c  cl_basic.h  cl_basic_context.c  cl_basic_lib.c
src/coll_patterns/: bruck_alltoall.h  double_binary_tree.h  recursive_knomial.h  ring.c  ring.h  sra_knomial.h  two_tree.h
src/coll_score/: ucc_coll_score.c  ucc_coll_score.h  ucc_coll_score_map.c
src/coll_select/: coll_select.c  coll_select.h  score_map.c
src/components/base/: ucc_base_iface.c  ucc_base_iface.h
src/components/cl/: ucc_cl.c  ucc_cl.h  ucc_cl_log.h  ucc_cl_type.h
src/components/ec/: ucc_ec.c  ucc_ec.h  ucc_ec_log.h
src/components/mc/: ucc_mc.c  ucc_mc.h  ucc_mc_log.h  ucc_mc_user_component.c  ucc_mc_user_component.h
src/components/tl/: ucc_tl.c  ucc_tl.h  ucc_tl_log.h
src/components/topo/: ucc_sbgp.c  ucc_sbgp.h  ucc_sysinfo.c  ucc_sysinfo.h  ucc_topo.c  ucc_topo.h
src/core/: Makefile.am  ucc_coll.c  ucc_constructor.c  ucc_context.c  ucc_context.h  ucc_dt.c  ucc_dt.h  ucc_ec.c  ucc_ec.h  ucc_ee.c  ucc_ee.h  ucc_global_opts.c  ucc_global_opts.h  ucc_lib.c  ucc_lib.h  ucc_mc.c  ucc_mc.h  ucc_op.c  ucc_op.h  ucc_progress_queue.c  ucc_progress_queue.h  ucc_progress_queue_mt.c  ucc_progress_queue_st.c  ucc_sbgp.c  ucc_sbgp.h  ucc_service_coll.c  ucc_service_coll.h  ucc_team.c  ucc_team.h  ucc_topo.c  ucc_topo.h  ucc_version.c.in
src/schedule/: ucc_schedule.c  ucc_schedule.h  ucc_schedule_pipelined.c  ucc_schedule_pipelined.h
src/team_lib/: Makefile.am  ucc_tl.c  ucc_tl.h
src/team_lib/basic/: Makefile.am  ucc_basic_context.c  ucc_basic_context.h  ucc_basic_lib.c  ucc_basic_team.c  ucc_basic_team.h  ucc_tl_basic.h
src/team_lib/dbg/: Makefile.am  ucc_debug_context.c  ucc_debug_context.h  ucc_debug_lib.c  ucc_tl_debug.h
src/ucc/api/: ucc.h  ucc_def.h  ucc_status.h  ucc_version.h.in
src/ucp_ctx/: Makefile.am  ucc_ucp_ctx.c  ucc_ucp_ctx.h  ucc_ucp_tag.h
src/utils/: Makefile.am  ini.c  ini.h  khash.h  ucc_assert.c  ucc_assert.h  ucc_atomic.h  ucc_class.h  ucc_coll_utils.c  ucc_coll_utils.h  ucc_compiler_def.h  ucc_component.c  ucc_component.h  ucc_datastruct.c  ucc_datastruct.h  ucc_debug.h  ucc_dt_reduce.h  ucc_list.h  ucc_lock_free_queue.h  ucc_log.h  ucc_malloc.h  ucc_math.c  ucc_math.h  ucc_math_op.h  ucc_mem_type.h  ucc_mpool.c  ucc_mpool.h  ucc_parser.c  ucc_parser.h  ucc_proc_info.c  ucc_proc_info.h  ucc_queue.h  ucc_rcache.h  ucc_spinlock.h  ucc_status.c  ucc_string.c  ucc_string.h  ucc_sys.c  ucc_sys.h  ucc_time.h
src/utils/arch/: atomic.h  bitops.h  cpu.h  cuda_def.h  rocm_def.h
src/utils/debug/: log.c  log.h  log_def.h  types.h
src/utils/profile/: ucc_profile.c  ucc_profile.h  ucc_profile_core.h  ucc_profile_off.h  ucc_profile_on.h
test/: Makefile.am  test_context_create.c  test_lib_init.c  test_team_create.c
test/cmake/: CMakeLists.txt  main.cpp
test/gtest/: Makefile.am  configure.m4
test/gtest/active_set/: test_active_set.cc
test/gtest/asym_mem/: test_asymmetric_memory.cc
test/gtest/coll/: test_allgather.cc  test_allgatherv.cc  test_allreduce.cc  test_allreduce_sliding_window.cc  test_allreduce_sliding_window.h  test_alltoall.cc  test_alltoallv.cc  test_barrier.cc  test_bcast.cc  test_gather.cc  test_gatherv.cc  test_knomial_schedule.cc  test_reduce.cc  test_reduce_scatter.cc  test_reduce_scatterv.cc  test_scatter.cc  test_scatterv.cc  test_tl_cuda_push.cc
test/gtest/coll_score/: test_score.cc  test_score.h  test_score_str.cc  test_score_update.cc  test_score_user_mt.cc  test_update_score.cc
test/gtest/coll_select/: test_score.cc  test_score.h  test_score_str.cc  test_score_update.cc  test_update_score.cc
test/gtest/common/: gtest-all.cc  gtest.h  main.cc  test.cc  test.h  test_gtest_cmn.cc  test_helpers.cc  test_helpers.h  test_obj_size.cc  test_ucc.cc  test_ucc.h  test_watchdog.cc
test/gtest/core/: libucc_mc_mock.c  (+34 more)
test/mpi/: Makefile.am  buffer.cc  main.cc  mpi_util.cc  mpi_util.h  test_allgather.cc  test_allgatherv.cc  test_allreduce.cc  test_alltoall.cc  test_alltoallv.cc  test_barrier.cc  test_bcast.cc  test_case.cc  test_gather.cc  test_gatherv.cc  test_mem_map.cc  test_mpi.c  test_mpi.cc  test_mpi.h  test_mpi_barrier.c  test_reduce.cc  test_reduce_scatter.cc  test_reduce_scatterv.cc  test_scatter.cc  test_scatterv.cc
tools/info/: Makefile.am  build_info.c  ucc_info.c  ucc_info.h
tools/perf/: .ucc_pt_coll_alltoallv.cc.swp  Makefile.am  ucc_perftest.cc  ucc_perftest.h  ucc_pt_benchmark.cc  ucc_pt_benchmark.h  ucc_pt_bootstrap.h  ucc_pt_bootstrap_mpi.cc  ucc_pt_bootstrap_mpi.h  ucc_pt_coll.cc  ucc_pt_coll.h  ucc_pt_coll_allgather.cc  ucc_pt_coll_allgatherv.cc  ucc_pt_coll_allreduce.cc  ucc_pt_coll_alltoall.cc  ucc_pt_coll_alltoallv.cc  ucc_pt_coll_barrier.cc  ucc_pt_coll_bcast.cc  ucc_pt_coll_gather.cc  ucc_pt_coll_gatherv.cc  ucc_pt_coll_reduce.cc  ucc_pt_coll_reduce_scatter.cc  ucc_pt_coll_reduce_scatterv.cc  ucc_pt_coll_scatter.cc  ucc_pt_coll_scatterv.cc  ucc_pt_comm.cc  ucc_pt_comm.h  ucc_pt_config.cc  ucc_pt_config.h  ucc_pt_cuda.cc  ucc_pt_cuda.h  ucc_pt_op_memcpy.cc  ucc_pt_op_reduce.cc  ucc_pt_op_reduce_strided.cc  ucc_pt_rocm.cc  ucc_pt_rocm.h
(+1193 files in other folders)
