#
# SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
# Copyright (c) 2021-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
#

cmakedir = $(libdir)/cmake/ucc
cmake_DATA =                       \
    ucc-targets.cmake              \
    ucc-config.cmake               \
    ucc-config-version.cmake

EXTRA_DIST = $(cmake_DATA)
