#
# Copyright (C) Mellanox Technologies Ltd. 2020-2022.  ALL RIGHTS RESERVED.
#

utils_noinst_headers =                     \
	utils/arch/aarch64/cpu.h          \
	utils/arch/aarch64/bitops.h       \
	utils/arch/ppc64/cpu.h            \
	utils/arch/ppc64/bitops.h         \
	utils/arch/x86_64/cpu.h           \
	utils/arch/x86_64/bitops.h        \
	utils/arch/cpu.h                  \
	utils/arch/bitops.h               \
	utils/arch/cuda_def.h             \
	utils/ucc_compiler_def.h          \
	utils/ucc_log.h                   \
	utils/ucc_parser.h                \
	utils/ucc_component.h             \
	utils/ucc_datastruct.h            \
	utils/ucc_math.h                  \
	utils/ucc_coll_utils.h            \
	utils/ucc_list.h                  \
	utils/ucc_string.h                \
	utils/ucc_queue.h                 \
	utils/ucc_proc_info.h             \
	utils/khash.h                     \
	utils/ucc_spinlock.h              \
	utils/ucc_mpool.h                 \
	utils/ucc_rcache.h                \
	utils/profile/ucc_profile.h       \
	utils/profile/ucc_profile_on.h    \
	utils/profile/ucc_profile_off.h   \
	utils/ucc_time.h                  \
	utils/ucc_sys.h

utils_libucc_la_sources =                 \
	utils/ucc_component.c             \
	utils/ucc_status.c                \
	utils/ucc_mpool.c                 \
	utils/ucc_math.c                  \
	utils/ucc_proc_info.c             \
	utils/ucc_string.c                \
	utils/ucc_coll_utils.c            \
	utils/ucc_parser.c                \
	utils/profile/ucc_profile.c       \
	utils/ucc_sys.c                   \
	utils/arch/x86_64/cpu.c           \
	utils/arch/aarch64/cpu.c
